@@ -1,3 +1,7 @@
+Tue Mar 20 16:49:37 CET 2007 Christian Anthon <anthon@kiku.dk>
+
+	* eval.[ch]: fix bug caused by signed/unsigned changes
+
 Fri Mar 16 02:30:26 CET 2007 Christian Anthon <anthon@kiku.dk>
 
 	* <many>: updated documentation. It now contains the information from
